force-app/main/default/objects/Secteur__c/Secteur__c.object-meta.xml
<CustomObject>
    <description>Un découpage géographique du territoire d&#39;un opérateur, pouvant se chevaucher. Il est aligné sur l&#39;organisation de l&#39;opérateur.</description>
    <label>Secteur</label>
    <nameField>
        <label>Nom du secteur</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secteurs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>