force-app/main/default/objects/Secteur__c/fields/Activer_l_AR_suppleant__c.field-meta.xml
<CustomField>
    <fullName>Activer_l_AR_suppleant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Seul le secteur &quot; Zone AR suppléant &quot; est concerné par cette activation.</description>
    <inlineHelpText>Seul le secteur &quot; Zone AR suppléant &quot; est concerné par cette activation.</inlineHelpText>
    <label>Activer l’AR suppléant</label>
    <type>Checkbox</type>
</CustomField>