force-app/main/default/objects/Secteur__c/fields/Centroide__c.field-meta.xml
<CustomField>
    <fullName>Centroide__c</fullName>
    <description>Propriété&quot;longitude centroide&quot; et &quot;latitude centroide&quot; (champs à masquer), ils vont servir à la règle de calcul.</description>
    <label>Centroide</label>
    <scale>14</scale>
    <type>Location</type>
</CustomField>