force-app/main/default/objects/Secteur__c/fields/Dmax__c.field-meta.xml
<CustomField>
    <fullName>Dmax__c</fullName>
    <label>Dmax</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>