force-app/main/default/objects/Secteur__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BE</fullName>
                <label>Belgique</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>HU</fullName>
                <label>Hungary</label>
            </value>
            <value>
                <fullName>LU</fullName>
                <label>Luxembourg</label>
            </value>
            <value>
                <fullName>NL</fullName>
                <label>Pays Bas</label>
            </value>
            <value>
                <fullName>CZ</fullName>
                <label>République Tchèque</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>Suisse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>