force-app/main/default/objects/Secteur__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Secteurs4</relationshipName>
    <type>Lookup</type>
</CustomField>