force-app/main/default/objects/Secteur__c/fields/Responsable_N_2__c.field-meta.xml
<CustomField>
    <fullName>Responsable_N_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable N°2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Secteurs1</relationshipName>
    <type>Lookup</type>
</CustomField>