force-app/main/default/objects/Secteur__c/fields/Secteur_parent__c.field-meta.xml
<CustomField>
    <fullName>Secteur_parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secteur parent</label>
    <referenceTo>Secteur__c</referenceTo>
    <relationshipLabel>Secteurs enfants</relationshipLabel>
    <relationshipName>Secteurs</relationshipName>
    <type>Lookup</type>
</CustomField>