force-app/main/default/objects/Secteur__c/fields/Selectionnable__c.field-meta.xml
<CustomField>
    <fullName>Selectionnable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case à cocher si le secteur est le plus bas de la hiérarchie de sectorisation de l’opérateur.</description>
    <label>Sélectionnable</label>
    <type>Checkbox</type>
</CustomField>