force-app/main/default/objects/Secteur__c/fields/Type_de_secteur__c.field-meta.xml
<CustomField>
    <fullName>Type_de_secteur__c</fullName>
    <label>Type de secteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cluster</fullName>
            </value>
            <value>
                <fullName>Zone de conso</fullName>
            </value>
            <value>
                <fullName>Zone AR suppléant</fullName>
            </value>
            <value>
                <fullName>Secteur AR</fullName>
            </value>
            <value>
                <fullName>Plaque</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Pays</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>