force-app/main/default/objects/Secteur__c/recordTypes/Secteur.recordType-meta.xml
<RecordType>
    <fullName>Secteur</fullName>
    <active>true</active>
    <label>Secteur</label>
</RecordType>