force-app/main/default/objects/Secteur__c/recordTypes/Secteur_BNL.recordType-meta.xml
<RecordType>
    <fullName>Secteur_BNL</fullName>
    <active>true</active>
    <label>Secteur BNL</label>
</RecordType>