force-app/main/default/objects/Secteur__c/recordTypes/Secteur_CHE.recordType-meta.xml
<RecordType>
    <fullName>Secteur_CHE</fullName>
    <active>true</active>
    <label>Secteur_CHE</label>
</RecordType>