force-app/main/default/objects/Secteur__c/recordTypes/Secteur_CZE.recordType-meta.xml
<RecordType>
    <fullName>Secteur_CZE</fullName>
    <active>true</active>
    <label>Secteur_CZE</label>
</RecordType>