force-app/main/default/objects/Secteur__c/recordTypes/Secteur_HUN.recordType-meta.xml
<RecordType>
    <fullName>Secteur_HUN</fullName>
    <active>true</active>
    <label>Secteur_HUN</label>
</RecordType>