force-app/main/default/objects/Secteur__c/listViews/Secteur_FRA.listView-meta.xml
<ListView>
    <fullName>Secteur_FRA</fullName>
    <columns>NAME</columns>
    <columns>Operateur__c</columns>
    <columns>Pays__c</columns>
    <columns>ReferenceExterne__c</columns>
    <columns>Responsable__c</columns>
    <columns>Responsable_N_2__c</columns>
    <columns>Secteur_parent__c</columns>
    <columns>Selectionnable__c</columns>
    <columns>Type_de_secteur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Operateur__c</field>
        <operation>equals</operation>
        <value>PUS_FR,CLP_FR</value>
    </filters>
    <label>FRA</label>
    <language>fr</language>
    <sharedTo>
        <group>SUPPORT_DOSI</group>
    </sharedTo>
</ListView>